--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ thead tr:first-child th:last-child{
   border-top-right-radius: 50px;
 }
 
-thead tr:last-child th:last-child{
+/* thead tr:last-child th:last-child{
   border-left: none;
   
   border-bottom-right-radius: 50px;
@@ -128,7 +128,7 @@ thead tr:last-child th:first-child{
   border-left: none;
   
   border-bottom-left-radius: 50px;
-}
+} */
 
 th{
   border-top: solid 2px #000000;
