--- a/css/style.css
+++ b/css/style.css
@@ -118,34 +118,47 @@ thead tr:first-child th:last-child{
   border-top-right-radius: 50px;
 }
 
-/* thead tr:last-child th:last-child{
-  border-left: none;
+tbody tr:last-child th:first-child{
   
+  
+  border-bottom-left-radius: 50px;
+}
+
+tbody tr:nth-child(10) th:nth-child(7){
+
   border-bottom-right-radius: 50px;
 }
 
-thead tr:last-child th:first-child{
-  border-left: none;
-  
-  border-bottom-left-radius: 50px;
-} */
+
 
 th{
   border-top: solid 2px #000000;
   vertical-align: middle;
   padding: 10px;
+  border-right: solid 2px #000000;
 }
 
 
 td{
 
   border-top: solid 2px #000000;
-  border-left: solid 2px #000000;
+  
+
   padding: 10px;
   text-align: center;
+}
+
+
+
+tr:nth-child(2n){
+  background-color: #d1d1d1;
   
 }
 
+
+tr:hover{
+  background-color: rgba(126,8,37,.25);
+}
 
 
 /*Add selectors and rules here*/
